--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - VITE_API_URL=http://backend:3000/api
     container_name: backoffice-frontend
     restart: unless-stopped
     ports:
@@ -30,7 +32,7 @@ services:
     depends_on:
       - backend
     environment:
-      - VITE_API_URL=http://backend:3013
+      - VITE_API_URL=http://backend:3000/api
     networks:
       - backoffice-network
 
